# cppctcdecode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  alphabet.cpp  alphabet.hpp  constants.hpp  decoder.cpp  decoder.hpp  language_model.cpp  language_model.hpp
tests/: CMakeLists.txt  test_decoders.cpp
